--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+  
 
 a {
   font-weight: 500;
@@ -65,4 +66,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 } */
