--- a/src/ComponentsStyles/CompanyProcess/Schedule.css
+++ b/src/ComponentsStyles/CompanyProcess/Schedule.css
@@ -15,7 +15,7 @@
     padding: 2rem 1.5rem;
     max-width: 480px;
     margin: auto;
-    position: relative;
+    /* position: relative; */
     z-index: 10;
     background-color: #fff;
     border-radius: var(--radius-md);
