finish user dark

--- a/src/ComponentsStyles/job/job_details.css
+++ b/src/ComponentsStyles/job/job_details.css
@@ -5,13 +5,13 @@
     margin-bottom: 1.5rem;
   }
   
-  .job-card {
+  /* .job-card {
     background-color: white;
-    border-radius: 8px;
+    border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
     padding: 2rem;
     position: relative;
-  }
+  } */
   
   .job-actions {
     position: absolute;
