fix company popup

--- a/src/ComponentsStyles/CompanyProcess/meetings_table.css
+++ b/src/ComponentsStyles/CompanyProcess/meetings_table.css
@@ -47,7 +47,7 @@
 }
 
 .table-header {
-  background-color: #722732 !important;
+  /* background-color: #c2283f !important; */
   color: white !important;
   font-weight: 600 !important;
   padding: 1rem !important;
